--- a/thesis_code/requirements.txt
+++ b/thesis_code/requirements.txt
@@ -1,3 +1,89 @@
-pip>=21.3.1
-setuptools>=58.5.3
-transformers>=4.12.5
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+blis==0.7.7
+catalogue==2.0.7
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.4
+cycler==0.11.0
+cymem==2.0.6
+Cython==0.29.28
+datasets==2.2.2
+dill==0.3.5.1
+filelock==3.7.0
+Flask==2.1.2
+fonttools==4.33.3
+frozenlist==1.3.0
+fsspec==2022.5.0
+funcy==1.17
+future==0.18.2
+gensim==4.2.0
+huggingface-hub==0.7.0
+idna==3.3
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.1.0
+kiwisolver==1.4.2
+langcodes==3.3.0
+libsvm==3.23.0.4
+MarkupSafe==2.1.1
+matplotlib==3.5.2
+multidict==6.0.2
+multiprocess==0.70.13
+murmurhash==1.0.7
+nltk==3.7
+numexpr==2.8.1
+numpy==1.22.4
+octis==1.10.4
+packaging==21.3
+pandas==1.4.2
+pathos==0.2.9
+pathy==0.6.1
+Pillow==9.1.1
+pox==0.3.1
+ppft==1.7.6.5
+preshed==3.0.6
+pyaml==21.10.1
+pyarrow==8.0.0
+pydantic==1.8.2
+pyLDAvis==3.3.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.1
+PyYAML==6.0
+regex==2022.4.24
+requests==2.27.1
+responses==0.18.0
+scikit-learn==0.24.2
+scikit-optimize==0.9.0
+scipy==1.8.1
+sentence-transformers==2.2.0
+sentencepiece==0.1.96
+six==1.16.0
+sklearn==0.0
+smart-open==5.2.1
+spacy==3.3.0
+spacy-legacy==3.0.9
+spacy-loggers==1.0.2
+srsly==2.4.3
+thinc==8.0.16
+threadpoolctl==3.1.0
+tokenizers==0.12.1
+tomotopy==0.12.2
+torch==1.11.0
+torchvision==0.12.0
+tqdm==4.64.0
+transformers @ git+https://github.com/huggingface/transformers@ba286fe7d51db12ad663effac83bed8199dd7141
+typer==0.4.1
+typing_extensions==4.2.0
+urllib3==1.26.9
+wasabi==0.9.1
+Werkzeug==2.1.2
+wordcloud==1.8.1
+xxhash==3.0.0
+yarl==1.7.2
+zipp==3.8.0
